[package]
name = "azathoth_libload"
version = "0.1.2"
edition = "2024"
repository = "https://github.com/AzathothC2/azathoth_libload"
license = "MIT"
description = "A Dynamic loader for the AzathothC2 framework"

[dependencies]
azathoth-core = "0.1.1"
azathoth-utils = "0.1.0"

[features]
default = ["hasher"]
hasher = ["azathoth-utils/hasher"]

